--- a/styles.css
+++ b/styles.css
@@ -31,3 +31,15 @@ li {
     display: flex;
     justify-content: space-between;
 }
+
+button:hover {
+    background-color: lightgray;
+}
+
+li button {
+    background: red;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 5px;
+}
