--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,9 @@ li button {
     cursor: pointer;
     padding: 5px;
 }
+ul {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
